# Axum_Web_Dev

./: .gitignore  Cargo.toml  README.md  TimeStamp.md  curl.http  curl.hurl  rustfmt.toml  structure.md
Test_AXUM_API/: GET List of tickets.bru  Get Test for Mike.bru  POST Create Ticket*.bru  POST Login into API.bru  bruno.json  collection.bru  results.json
Test_AXUM_API/environments/: LOCAL.bru
src/: ctx.rs  error.rs  log.rs  main.rs  model.rs
src/web/: mw_auth.rs  routes_login.rs  routes_tickets.rs
tests/: quick_dev.rs
