[package]
name = "rust-axum-web"
version = "0.1.0"
edition = "2021"
authors = ["Michaël CHLON"]
license = "MIT OR Apache-2.0"
description = "Rust Axum Practice"
homepage = ""
repository = ""

[workspace.lints.rust]
unsafe_code = "forbid"
unused = "allow"       # For experimental dev.

[lints]
workspace = true

[dependencies]
# -- Async --
tokio = { version = "1.37.0", features = ["full"] }
# -- Serde --
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
serde_with = "3.8.1"
# -- Axum --
axum = { version = "0.7.5", features = ["macros"] }
tower-http = { version = "0.5.2", features = ["fs"] }
tower-cookies = "0.10.0"
# -- Others --
lazy-regex = "3.1.0"
async-trait = "0.1.80"
strum_macros = "0.26.2"
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }


[dev-dependencies]
anyhow = "1.0.81"
httpc-test = "0.1.9"
